<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- Application Name -->
    <string name="app_name">Student Sales App</string>

    <!-- Action Bar and Overflow -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Keyword</string>
    <string name="sell_option_text">Sell</string>
    <string name="review_option_text">Review Your Listing</string>
    <string name="settings_option_text">Settings</string>
    <!-- Main_activity -->
    <string name="main_list">main_list</string>

    <!-- Sell_activity -->
    <string name="sell_title">Sell Your Items</string>
    <string name="sell_titleHint">Add a title for your item.</string>
    <string name="sell_description">Item Description:</string>
    <string name="sell_descriptionHint">Add a description for your item.</string>
    <string name="sell_price">Item Price:</string>
    <string name="sell_photos">Add Photos:</string>
    <string name="sell_takePhotoButtonDescription">Take image.</string>
    <string name="sell_photoViewDescription">Images for the item.</string>
    <string name="sell_phoneNumber">Phone Number:</string>
    <string name="sell_location">Location:</string>
    <string name="sell_button_item">Sell</string>
    <string name="sell_priceHint">Add a price for your item.</string>
    <string name="sell_phoneHint">Add a contact number for yourself.</string>
    <string name="item_call">Call Seller</string>

    <!-- Single_buy_row -->
    <string name="single_title">Item For Sale</string>
    <string name="single_image">Image</string>

    <!-- activities_main_item -->
    <string name="item_noTitle">No Title Listed</string>
    <string name="item_notsetText">No Information Listed</string>
    <string name="item_imageViewDescription">Image Description</string>
    <string name="item_desctitle">Description:</string>
    <string name="item_pricetitle">Price:</string>
    <string name="item_noPrice">No Price Listed</string>
<<<<<<< HEAD
    <string name="item_creationtitle">Listed:</string>
=======
    <string name="item_creationtitle">Posted On:</string>
>>>>>>> c9aa50d3a8b865e36cf15b8c6be0b4ee47ab767f
    <string name="item_noTime">No Date Listed</string>
    <string name="item_locationtitle">Location:</string>
    <string name="item_nolocation">No Location Listed</string>
    <string name="item_contacttitle">Contact:</string>
    <string name="item_nocontact">No Contact Listed</string>

    <!-- Review_activity -->
    <string name="review_title">Review Your Listings</string>

    <!-- Manifest -->
    <string name="manifest_child">title_activity_display_message</string>

</resources>

