<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Menu defines what is in the action bar along with icons, text, colour etc... -->
    <!-- Search -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/action_search"
          android:title="@string/action_search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView"/>

    <!--  Sell Option -->
    <item
            android:id="@+id/sell_option"
            android:showAsAction="ifRoom"
            android:title="@string/sell_option_text" />

    <!--  Review Option -->
    <item
            android:id="@+id/review_option"
            android:showAsAction="ifRoom"
            android:title="@string/review_option_text"/>

</menu>
