<!-- Scroll View is used to allow for different screen sizes -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:clickable="false"
            android:overScrollMode="never"
            android:id="@+id/sellScrollView"
            android:background="#ffffff">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:windowSoftInputMode="stateUnchanged"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Item Title Title-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_title"
                android:textColor="#000000"/>

        <!-- User Enters the Title -->
        <EditText
                android:id="@+id/titleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sell_titleHint"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:maxLength="50">
        </EditText>

        <!-- Title Validation -->
        <TextView
                android:id="@+id/titleValidateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="" />

        <!-- Description Title -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_description"
                android:textColor="#000000"/>

        <!-- User Enters the Description -->
        <EditText
                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minLines="1"
                android:hint="@string/sell_descriptionHint"
                android:inputType="textCapSentences|textMultiLine" >
        </EditText>

        <!-- Description Validation -->
        <TextView
                android:id="@+id/descriptionValidateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="" />

        <!-- Price Title -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_price"
                android:textColor="#000000"/>

        <!-- User Enters the Price -->
        <EditText
                android:id="@+id/priceTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minLines="1"
                android:maxLength="8"
                android:inputType="numberDecimal"
                android:hint="@string/sell_priceHint">
        </EditText>

        <!-- Price Validation -->
        <TextView
                android:id="@+id/priceValidateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="" />

        <!-- Photos -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <!-- Photos Title -->
            <TextView
                    android:id="@+id/photosTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_photos"
                    android:textColor="#000000"/>

        </LinearLayout>

        <!-- Images + icons -->
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

            <!-- Image 1 -->
            <ImageView
                    android:id="@+id/photoView1"
                    android:layout_alignParentLeft="true"
                    android:layout_width="96dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/sell_photoViewDescription"
                    android:src="@drawable/sell_image"
                    android:onClick="takePhoto"/>

            <!-- Image 2 -->
            <ImageView
                    android:id="@+id/photoView2"
                    android:layout_width="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="128dp"
                    android:layout_margin="1dp"
                    android:contentDescription="@string/sell_photoViewDescription"
                    android:src="@drawable/sell_image"
                    android:onClick="takePhoto"/>

            <!-- Image 3 -->
            <ImageView
                    android:id="@+id/photoView3"
                    android:layout_width="96dp"
                    android:layout_height="128dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/sell_photoViewDescription"
                    android:src="@drawable/sell_image"
                    android:onClick="takePhoto"/>
        </RelativeLayout>

        <!-- Phone Number Title-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_phoneNumber"
                android:textColor="#000000"/>

        <!-- User enters their Phone Number -->
        <EditText
                android:id="@+id/phoneNumberTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/sell_phoneHint">
        </EditText>

        <!-- Phone Number Validation -->
        <TextView
                android:id="@+id/contactValidateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="" />

        <!-- Location Title-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_location"
                android:textColor="#000000"/>

        <!-- Auto-filled User Location -->
        <EditText
                android:id="@+id/locationTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords"
                android:enabled="false" >
        </EditText>

        <!-- Sell Button -->
        <Button
                android:id="@+id/ButtonSellItem"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="buttonSellItem"
                android:text="@string/sell_button_item"
                android:textColor="#ffffff"
                android:background="@drawable/custombutton"
                android:layout_marginTop="8dp">
        </Button>
    </LinearLayout>

</ScrollView>